Archivo html y css mejorados, .vscode añadido, con mas dinamismo y colores no tan fuertes para la buena vista del usuario.

--- a/index.html
+++ b/index.html
@@ -11,31 +11,30 @@
         <h1>Previon - tienda de bebidas</h1>
     </header>
     <nav class="nav-inicio">
-<ul class="listanav">
-    <li class="listanav"><a  class="linknav">Inicio</a></li>
-    <li class="listanav"><a  class="linknav"href="">Informacion</a></li>
-    <li class="listanav"><a class="linknav" href="">Ubicacion</a></li>
-    <li class="listanav"><a class="linknav" href="">Pedir</a></li>
-    <li class="listanav"><a class="linknav" href="">Descuentos</a></li>
-</ul>
+        <input type="checkbox" id="menu-toggle">
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+        <ul class="listanav">
+            <li><a class="linknav">Inicio</a></li>
+            <li><a class="linknav" href="">Información</a></li>
+            <li><a class="linknav" href="">Hacer pedido</a></li>
+            <li><a class="linknav" href="">Ubicación</a></li>
+        </ul>
     </nav>
     <main>
         <h3>Productos disponibles</h3>
-<ul class="listaproductos">
-    <li class="productos">Cerveza: $2.000</li>
-    <li class="productos">Vino: $1.500</li>
-    <li class="productos">Vodka: $8.000</li>
-    <li class="productos">Fernet: $7.000</li>
-    <li class="productos">Speed: $1.300</li>
-    <li class="productos">Coca-Cola: $2.000</li>
-</ul>
-
+        <div class="producto-grid">
+            <div class="producto-card">Cerveza: $2.000</div>
+            <div class="producto-card">Vino: $1.500</div>
+            <div class="producto-card">Vodka: $8.000</div>
+            <div class="producto-card">Fernet: $7.000</div>
+            <div class="producto-card">Speed: $1.300</div>
+            <div class="producto-card">Coca-Cola: $2.000</div>
+        </div>
     </main>
     <footer class="footer-inicio">
-<p>Derechos de autor - Gonzalo Criado</p>
-<p>Coderhouse 2024 / Comision-59950</p>
+        <p>Derechos de autor - Gonzalo Criado</p>
+        <p>Coderhouse 2024 / Comisión-59950</p>
     </footer>
-
 
     <script src="/js/index.js"></script>
 </body>
