--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
     <header>
         <h1>Previon - tienda de bebidas</h1>
+        <div class="menu-hamburguesa" id="menuToggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </header>
-    <nav class="nav-inicio">
-        <input type="checkbox" id="menu-toggle">
-        <label for="menu-toggle" class="menu-icon">&#9776;</label>
+    <nav class="nav-inicio" id="menuNav">
         <ul class="listanav">
-            <li><a class="linknav">Inicio</a></li>
+            <li><a class="linknav" href="">Inicio</a></li>
             <li><a class="linknav" href="">Información</a></li>
             <li><a class="linknav" href="">Hacer pedido</a></li>
             <li><a class="linknav" href="">Ubicación</a></li>
@@ -37,5 +40,6 @@
     </footer>
 
     <script src="/js/index.js"></script>
+    <script src="/js/menuhamburguesa.js"></script>
 </body>
 </html>
