En este commit se hizo lo siguiente: se crearon carpetas nuevas (assets, bebidas , promos) para luego usarlas para el proyecto final y poder dividir bien todos los diseños y caracteristicas del proyecto, lo siguiente fue restaurar el HTML y sacarle un par de cosas que no hacian falta para el proyecto, despues agregarlo lo visto al JS lo que necesite para que la pagina principal funcione, para el proyecto final habra 4 paginas con su respectiva info y fotos con promos, queria probar bien el DOM que si lo pude lograr, por ultimo el CSS le grege caracteristicas y clases nuevas

--- a/index.html
+++ b/index.html
@@ -17,22 +17,19 @@
     </header>
     <nav class="nav-inicio" id="menuNav">
         <ul class="listanav">
-            <li><a class="linknav" href="">Inicio</a></li>
-            <li><a class="linknav" href="">Información</a></li>
-            <li><a class="linknav" href="">Hacer pedido</a></li>
-            <li><a class="linknav" href="">Ubicación</a></li>
+            <li><a class="linknav" href="#">Inicio</a></li>
+            <li><a class="linknav" href="#">Información</a></li>
+            <li><a class="linknav" href="#">Hacer pedido</a></li>
+            <li><a class="linknav" href="#">Ubicación</a></li>
         </ul>
     </nav>
     <main>
         <h3>Productos disponibles</h3>
-        <div class="producto-grid">
-            <div class="producto-card">Cerveza: $2.000</div>
-            <div class="producto-card">Vino: $1.500</div>
-            <div class="producto-card">Vodka: $8.000</div>
-            <div class="producto-card">Fernet: $7.000</div>
-            <div class="producto-card">Speed: $1.300</div>
-            <div class="producto-card">Coca-Cola: $2.000</div>
-        </div>
+        <div class="producto-grid"></div>
+
+        <h3>Carrito</h3>
+        <ul id="listaCarrito"></ul>
+        <p id="totalPrecio" class="total-precio">Total: $0</p>
     </main>
     <footer class="footer-inicio">
         <p>Derechos de autor - Gonzalo Criado</p>
