Creacion de las demas paginas con el menu de hamburguesa y edicion basica, y archivos js creados para las demas paginas

--- a/HTML/informacion.html
+++ b/HTML/informacion.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Previon - Inicio</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <title>Nuestra informacion</title>
 </head>
 <body>
     <header>
@@ -17,26 +17,13 @@
     </header>
     <nav class="nav-inicio" id="menuNav">
         <ul class="listanav">
-            <li><a class="linknav" href="index.html">Inicio</a></li>
-            <li><a class="linknav" href="/HTML/informacion.html">Información</a></li>
+            <li><a class="linknav" href="/index.html">Inicio</a></li>
+            <li><a class="linknav" href="informacion.html">Información</a></li>
             <li><a class="linknav" href="/HTML/hacer_pedido.html">Hacer pedido</a></li>
             <li><a class="linknav" href="/HTML/ubicacion.html">Ubicación</a></li>
         </ul>
     </nav>
-    <main>
-        <h3>Productos disponibles</h3>
-        <div class="producto-grid"></div>
-
-        <h3>Carrito</h3>
-        <ul id="listaCarrito"></ul>
-        <p id="totalPrecio" class="total-precio">Total: $0</p>
-    </main>
-    <footer class="footer-inicio">
-        <p>Derechos de autor - Gonzalo Criado</p>
-        <p>Coderhouse 2024 / Comisión-59950</p>
-    </footer>
-
-    <script src="/js/index.js"></script>
     <script src="/js/menuhamburguesa.js"></script>
+    <script src="/js/informacion.js"></script>
 </body>
 </html>
