--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Previon - Tienda de Bebidas</title>
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/bootstrap/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css">
 </head>
 <body>
     <header>
-        <h1>Previon - Tienda de Bebidas</h1>
-        <div class="menu-hamburguesa" id="menuToggle">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+        <h1>Previon - tienda de bebidas</h1>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Previon</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/HTML/informacion.html">Información</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/HTML/hacer_pedido.html">Hacer pedido</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/HTML/ubicacion.html">Ubicación</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
-    <nav class="nav-inicio" id="menuNav">
-        <ul class="listanav">
-            <li><a class="linknav" href="index.html">Inicio</a></li>
-            <li><a class="linknav" href="/HTML/informacion.html">Información</a></li>
-            <li><a class="linknav" href="/HTML/hacer_pedido.html">Hacer pedido</a></li>
-            <li><a class="linknav" href="/HTML/ubicacion.html">Ubicación</a></li>
-        </ul>
-    </nav>
-    
+
     <main>
         <h3>Productos Disponibles</h3>
-        <div id="categoriaGrid" class="producto-grid"></div>
+        <div id="categoriaGrid" class="categoria-grid"></div>
         
         <div id="detalleProducto" class="detalle-producto" style="display: none;"></div>
 
@@ -40,8 +50,7 @@
         <p>Coderhouse 2024 / Comisión-59950</p>
     </footer>
 
+    <script src="/bootstrap/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/index.js"></script>
-    <script src="/js/menuhamburguesa.js"></script>
 </body>
 </html>
-
