--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                         <a class="nav-link active" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/HTML/informacion.html">Información</a>
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#infoModal">Información</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/HTML/hacer_pedido.html">Hacer pedido</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/HTML/ubicacion.html">Ubicación</a>
+                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#ubicacionModal">Ubicación</a>
                     </li>
                 </ul>
             </div>
@@ -49,6 +49,50 @@
         <p>Derechos de autor - Gonzalo Criado</p>
         <p>Coderhouse 2024 / Comisión-59950</p>
     </footer>
+
+    <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="infoModalLabel">Horarios y Contacto</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6>Horarios</h6>
+                    <p>Días: Lunes, Martes, Miércoles, Jueves, Viernes, Sábado y Domingo</p>
+                    <p>Horario: de 09:00 AM a 22:00 PM</p>
+                    <h6>Contacto</h6>
+                    <p>+3518031033</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="ubicacionModal" tabindex="-1" aria-labelledby="ubicacionModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="ubicacionModalLabel">Ubicación</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6>Dirección</h6>
+                    <p>27 de abril 1188, Córdoba, Córdoba, Argentina</p>
+                    <p>Esquina paso de los andes</p>
+                    <h6>Mapa</h6>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13538.768146292327!2d-64.1928!3d-31.4159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2c814a0a711%3A0xf6e6b3a50671676b!2s27%20de%20Abril%201188%2C%20X5000CFA%20C%C3%B3rdoba%2C%20Argentina!5e0!3m2!1ses-419!2sar!4v1694826002947!5m2!1ses-419!2sar"
+                        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="/bootstrap/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/index.js"></script>
